Fixed Nav bar on mobile

--- a/css/mystyle.css
+++ b/css/mystyle.css
@@ -39,6 +39,7 @@ ul{
 	margin: 0 auto;
 	padding: 0;
 	text-align:center;
+	overflow: auto;
 }
 li{
 	color:white;
